Content creation code added.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "test:unit": "jest"
   },
   "dependencies": {
+    "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
